<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <Button
        android:id="@+id/admin"
        android:layout_width="83dp"
        android:layout_height="30dp"
        android:background="@drawable/btn_admin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/android_picture"
            android:layout_width="78dp"
            android:layout_height="71dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/logo_nb" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="380dp"
            android:layout_marginTop="150dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/decompte"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textColor="#888888"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/pause_play"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:text="@string/pause_play" />

            <Button
                android:id="@+id/reset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:text="@string/reset" />

            <Button
                android:id="@+id/action"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button3"
                android:text="@string/action" />

            <Button
                android:id="@+id/next_quarter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button4"
                android:text="@string/next_quarter" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/live_score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/long_button"
            android:text="@string/live_score" />

        <Button
            android:id="@+id/play_by_play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/long_button"
            android:text="@string/play_by_play" />

        <Button
            android:id="@+id/stats_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/long_button"
            android:text="@string/stats_game" />

        <Button
            android:id="@+id/stats_team"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/long_button"
            android:text="@string/stats_team" />
    </LinearLayout>

</LinearLayout>