<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/android_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/accueil"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/accueil" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="Quitter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="400dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bienvenue"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="400dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>